--- a/k8s.yml
+++ b/k8s.yml
@@ -15,6 +15,10 @@ spec:
       containers:
       - image: tiangolo/uvicorn-gunicorn:python3.9
         name: fastapi
+        args:
+         - echo "test"
+           uvicorn main:app;
+
 
 ---
 
